--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "intro.js": "^3.3.1",
         "project-name-generator": "^2.1.9",
         "react": "^17.0.1",
+        "react-countdown-clock": "^2.8.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-modal": "^3.12.1",
